--- a/src/App.css
+++ b/src/App.css
@@ -1,45 +1,173 @@
 
-.App{
+
+.App {
   display: flex;
   justify-content: center;
   flex-direction: column;
   align-items: center;
+
+
 }
 
-.burger-items{
+.Heading {
+  color: #f2b704;
+  font-size: 80px;
+  font-weight: bold;
+}
+
+.App-logo {
+  height: 40vmin;
+  pointer-events: none;
+}
+
+@media (prefers-reduced-motion: no-preference) {
+  .App-logo {
+    animation: App-logo-spin infinite 20s linear;
+  }
+}
+
+.burger-items {
   display: flex;
   justify-content: center;
-  gap: 30px;
-  padding: 10px;
+  gap: 20px;
+  margin: 50px;
 }
 
+.item-buttons {
+  font-size: 20px;
+}
 
-.burger-item{
+.burger-item {
   display: flex;
-  gap: 40px;
-  border: 2px solid;
+  gap: 30px;
+  border: 1px solid #111;
   padding: 10px;
-  border-radius: 20px;
+  border-radius: 10px;
+}
+
+button {
+  border: none;
+  background-color: #ffdfba;
+  border-radius: 50%;
+  padding: 10px;
+  display: flex;
+  align-items: center;
   font-size: 30px;
 }
 
-button{
-border: none;
-background-color:#ffdfba ;
-border-radius: 50%;
-padding: 10px;
-display: flex;
-align-items: center;
-font-size: 30px;
+.burger-container {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  gap: 5px;
 }
 
 
-.burger-container{
+.App-header {
+  background-color: #282c34;
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  font-size: calc(10px + 2vmin);
+  color: white;
+}
+
+.overlay {
+  background-color: #595959;
+  height: 100vh;
+  position: absolute;
+  inset: 0;
+  pointer-events: none;
+}
+
+.form-buttons {
+  margin-top: 3rem;
+}
+
+.form-buttons>button {
+  height: 40px;
+  width: 8rem;
+  border-radius: 10px;
+  margin-right: 20px;
+  cursor: pointer;
+}
+
+.price {
+  
+  padding: 30px;
+  font-size: 50px;
+  font-size: bold;
+  background-color: #ffee93;
+  border-radius: 15px;
+
+}
+
+ .place-order{
+  cursor: pointer;
+  background-color:#baffc9 ;
+  color:#ffb3ba;
+  padding: 15px;
+  border-radius: 20px ;
+  font-size: 30px;
+  font-weight: bold;
+ }
+
+.modal {
   display: flex;
   justify-content: center;
   align-items: center;
   flex-direction: column;
-  margin-top: 100px;
-  
+  margin-top: 50px;
+  background-color: #5959;
+  width: 50%;
+  padding: 100px;
+  margin: auto;
+  margin-top: 6rem;
+  border-radius: 10px;
+  pointer-events: all;
 }
 
+input {
+  width: 18rem;
+  height: 40px;
+  padding-left: 20px;
+  border: none;
+  border-radius: 10px;
+}
+
+.Bread {
+  color: #b44900;
+  font-size: 50px;
+
+
+}
+
+.Cheese {
+  color: #f4b85c;
+  font-size: 80px;
+}
+
+
+.Aloo {
+  color: #eabe81;
+  font-size: 60px;
+
+}
+
+.App-link {
+  color: #61dafb;
+}
+
+@keyframes App-logo-spin {
+  from {
+    transform: rotate(0deg);
+  }
+
+  to {
+    transform: rotate(360deg);
+  }
+}
