--- a/src/App.css
+++ b/src/App.css
@@ -31,6 +31,7 @@
   justify-content: center;
   gap: 20px;
   margin: 50px;
+  background-color: #daeaf6;
 }
 
 .item-buttons {
@@ -39,15 +40,20 @@
 
 .burger-item {
   display: flex;
+  justify-content: center;
+  align-items: center;
   gap: 30px;
   border: 1px solid #111;
   padding: 10px;
   border-radius: 10px;
+  font-size: 25px;
+  font-weight: bold;
 }
 
 button {
   border: none;
-  background-color: #ffdfba;
+  cursor: pointer;
+  background-color: #daeaf6;
   border-radius: 50%;
   padding: 10px;
   display: flex;
@@ -96,24 +102,26 @@ button {
   cursor: pointer;
 }
 
-.price {
+.price{
   
   padding: 30px;
-  font-size: 50px;
+  font-size: 30px;
   font-size: bold;
   background-color: #ffee93;
   border-radius: 15px;
-
+  margin-top: 50px;
+  
 }
 
  .place-order{
   cursor: pointer;
   background-color:#baffc9 ;
-  color:#ffb3ba;
+  color: #cb202d;
   padding: 15px;
   border-radius: 20px ;
-  font-size: 30px;
+  font-size: 20px;
   font-weight: bold;
+  margin-top: 50px;
  }
 
 .modal {
